--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -3,8 +3,10 @@
 @import 'box';
 @import 'breadcrumbs';
 @import 'buttons';
+@import 'cookies';
 @import 'footer-links';
 @import 'footer';
+@import 'form';
 @import 'header';
 @import 'navigation';
 @import 'popup';
