feat: Protection - style protection site

--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -6,4 +6,16 @@ input {
 	&[type='number'] {
 		@include input;
 	}
+
+	&[type='email'] {
+		@include input;
+	}
+
+	&[type='password'] {
+		@include input;
+	}
+
+	&[type='submit'] {
+		@include button;
+	}
 }
