--- a/app/scss/base/_document.scss
+++ b/app/scss/base/_document.scss
@@ -20,3 +20,37 @@ body {
 	padding: $gap;
 	overflow-x: hidden;
 }
+
+// protekce webu
+.entrance-protection-inner {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	gap: $gap;
+
+	fieldset {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: $gap;
+		border: 0;
+		padding: 0;
+		min-width: 300px;
+		padding-top: $gap;
+
+		h1 {
+			display: none;
+		}
+
+		input {
+			width: 100%;
+		}
+	}
+}
+
+.no-display {
+	display: none !important;
+}
