--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -8,6 +8,7 @@
 @import 'footer';
 @import 'form';
 @import 'header';
+@import 'messages';
 @import 'navigation';
 @import 'popup';
 @import 'price';
