--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -30,12 +30,18 @@ $c-white: #fff;
 
 $c-blue-400: #2b4d5b;
 
+$c-red-400: #d9534f;
+
+$c-green-400: #5cb85c;
+
 $c-gray-200: #ccc;
 $c-gray-900: #222;
 
 $c-text: $c-gray-900;
 $c-primary: $c-blue-400;
 $c-secondary: $c-gray-900;
+$c-error: $c-red-400;
+$c-success: $c-green-400;
 
 // border
 $border: 2px solid $c-gray-900;
