--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -3,6 +3,7 @@ footer {
 	display: flex;
 	justify-content: center;
 	margin-top: calc($gap * 3);
+	padding-bottom: 100px;
 
 	.footer-bottom {
 		display: flex;
