--- a/app/scss/base/_document.scss
+++ b/app/scss/base/_document.scss
@@ -11,13 +11,14 @@ html,
 body {
 	min-height: 100%;
 	height: 100%;
+	margin-bottom: 0 !important;
 }
 
 body {
 	display: flex;
 	flex-direction: column;
 	margin: 0;
-	padding: $gap;
+	padding: 0 $gap;
 	overflow-x: hidden;
 }
 
